--- a/pages/words.html
+++ b/pages/words.html
@@ -153,7 +153,7 @@
   </main>
 
   <!-- Settings button (bottom-right) -->
-  <a class="settings-fab" href="/pages/settings.html" aria-label="Settings">
+  <a class="settings-fab" href="../pages/settings.html" aria-label="Settings">
     <!-- Gear icon -->
     <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
       <path fill="currentColor"
