activity-runner.html

--- a/index.html
+++ b/index.html
@@ -199,15 +199,14 @@
   <main>
     <header>
       <div>
-        <h1>BrailleServer</h1>
-        <p class="subtitle">Kies een onderdeel. De README staat rechts voor context en uitleg.</p>
+        <h1>BrailleStudio</h1>
       </div>
     </header>
 
     <div class="layout">
       <nav aria-label="Hoofdmenu">
         <ul>
-          <li><a href="./pages/words.html">Letter en woorden oefenen</a></li>
+          <li><a href="./pages/activity-runner.html">Letter en woorden oefenen</a></li>
           <li><a href="./pages/stories.html">Verhalen lezen</a></li>
           <li><a href="./components/instructions/instructions-audio.html">Instructies – audio overzicht</a></li>
           <li><a href="./components/profile/profile.html">Profiel student</a></li>
