activity-runner.html

--- a/pages/activity-runner.html
+++ b/pages/activity-runner.html
@@ -255,7 +255,16 @@
 
   <script src="../activities/tts.js"></script>
   <script src="../activities/letters.js"></script>
+  
+  <script src="../activities/readlines.js"></script>
+  
+  <!--
+  
   <script src="../activities/words.js"></script>
+  
+  -->
+  
+  
   <script src="../activities/story.js"></script>
   <script src="../activities/sounds.js"></script>
   
